mise au normes et corection pour cc de tout les f

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "editor.cursorStyle": "block",
     "editor.cursorBlinking": "smooth",
-    "editor.cursorSmoothCaretAnimation": true
+    "editor.cursorSmoothCaretAnimation": "on"
 }
