--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "editor.cursorStyle": "block",
-    "editor.cursorBlinking": "smooth",
+    "editor.cursorBlinking": "expand",
     "editor.cursorSmoothCaretAnimation": "on"
 }
